--- a/views/categoriesNew.ejs
+++ b/views/categoriesNew.ejs
@@ -16,7 +16,7 @@
 
             <form action="/admin/dashboard/new/categorie" method="post">
                 <label for="title">Nome da categoria</label>
-                <input type="text" placeholder="Ex: Até 5 reais" name="title">
+                <input type="text"  minlength="5" maxlength="150" placeholder="Ex: Até 5 reais" name="title">
                 <input type="submit" value="Cadastrar categoria">
             </form>
             
