--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,80 +1,83 @@
-    <!--menu principal-->
     <header class="main__header">
-        <!--navbar-->
-        <div class="content__header__section"><!--Falta alinhar os links-->
-            <div class="menu__section__left">
-                <ul>
-                    <li><img  class="menu__icon" src="/assets/burger-icon.svg" alt="Burger" onclick="myFunction()"></li>
-                    <li class="drop__links"><a href="/">Logo</a></li>   
-                    <li class="drop__links"><a href="/">Inicial</a></li>              
-                </ul>
-            </div>
-    
-            <div class="menu__section__right">
-                <ul>
-                    <%if(!isAuthenticated){%>
-                        <li><button onclick="open_modal()">Entrar</button></li>
-                    <%}else{%>
-                        <li><button onclick="myFunction2()">Opções</button></li>
-                    <%}%>
-                </ul>
-            </div>
 
+        <div class="content__header__content">
 
-            <!-- The Modal login -->
-        <div id="id01" class="modal">
-            <!-- Modal Content -->
-            <div class="modal-content animate ">
-                <div class="form__container">
-
-                    <div class="form__header">
-                        <h1 class="text__heading">Entrar</h2>
-                    </div>
-                            
-                    <form class="form__login" action="/login" method="post"><!--content__field__text//content__button__submit//content__footer__text-->
-                        <input class="text__field" type="email" name="email" id="email" placeholder="Email" minlength="5" maxlength="150" required>
-                        <input class="text__field" type="password" name="password" id="password" placeholder="Senha" minlength="5" maxlength="30" required> 
-                        <input class="button_login" type="submit" value="Entrar">
-                    </form>
-
-                    <div class="alternative__options" style="background-color:#f1f1f1">
-                        <a class="text__forgot" href="/forgot-password">Esqueceu senha?</a>
-                        <h2 class="text__footer">Não tem?<a href="/register">Registre-se</a></h3>
-                    </div>
+            <div class="content__header__section"><!--Falta alinhar os links-->
+                <div class="menu__section__left">
+                    <ul>
+                        <li><img  class="menu__icon" src="/assets/burger-icon.svg" alt="Burger" onclick="myFunction()"></li>
+                        <li class="drop__links"><a href="/">Logo</a></li>   
+                        <li class="drop__links"><a href="/">Pagina Inicial</a></li>              
+                    </ul>
+                </div>
+        
+                <div class="menu__section__right">
+                    <ul>
+                        <%if(!isAuthenticated){%>
+                            <li><button onclick="open_modal()">Entrar</button></li>
+                        <%}else{%>
+                            <li><button onclick="myFunction2()">Opções</button></li>
+                        <%}%>
+                    </ul>
                 </div>
 
-            </div>
-        </div>
-        
-        <!--menu mobile-->
-        <div class="topnav">
-        <!-- Navigation links (hidden by default) -->
-        <div id="myLinks">
-            <a href="#news">Experiências</a>
-            <a href="#contact">Sobre</a>
-            <a href="#about">Contato</a>
-        </div>
-        </div>
 
-        <!--menu perfil-->
-        <div class="topnav-2">
+                <!-- The Modal login -->
+            <div id="id01" class="modal">
+                <!-- Modal Content -->
+                <div class="modal-content animate ">
+                    <div class="form__container">
+
+                        <div class="form__header">
+                            <h1 class="text__heading">Entrar</h2>
+                        </div>
+                                
+                        <form class="form__login" action="/login" method="post"><!--content__field__text//content__button__submit//content__footer__text-->
+                            <input class="text__field" type="email" name="email" id="email" placeholder="Email" minlength="5" maxlength="150" required>
+                            <input class="text__field" type="password" name="password" id="password" placeholder="Senha" minlength="5" maxlength="30" required> 
+                            <input class="button_login" type="submit" value="Entrar">
+                        </form>
+
+                        <div class="alternative__options" style="background-color:#f1f1f1">
+                            <a class="text__forgot" href="/forgot-password">Esqueceu senha?</a>
+                            <h2 class="text__footer">Não tem?<a href="/register">Registre-se</a></h3>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            
+            <!--menu mobile-->
+            <div class="topnav">
             <!-- Navigation links (hidden by default) -->
-
-            <%if(isAuthenticated){%>
-            <div id="myLinks-2">
-                    <li><a href="/myprofile">Perfil</a></li>
-                    <li><a href="/logout">Sair
-                            <img src="/assets/signout_106525.svg" alt="">
-                            </a>
-                    </li>
+            <div id="myLinks">
+                <a href="#news">Experiências</a>
+                <a href="#contact">Sobre</a>
+                <a href="#about">Contato</a>
             </div>
-            <%}%>
+            </div>
 
-        </div>
+            <!--menu perfil-->
+            <div class="topnav-2">
+                <!-- Navigation links (hidden by default) -->
+
+                <%if(isAuthenticated){%>
+                <div id="myLinks-2">
+                        <li><a href="/myprofile">Perfil</a></li>
+                        <li><a href="/logout">Sair
+                                <img src="/assets/signout_106525.svg" alt="">
+                                </a>
+                        </li>
+                </div>
+                <%}%>
+
+            </div>
+            
+            <script src="/js/script.js"></script>
+
+
+            </div>
         
-        <script src="/js/script.js"></script>
-
-
         </div>
 
 
