--- a/views/partials/headerAlternativo.ejs
+++ b/views/partials/headerAlternativo.ejs
@@ -1,6 +1,7 @@
     <header class="main__header">
 
-        <div class="content__header__section">
+        <div class="content__header__content">
+            <div class="content__header__section">
 
                 <div class="menu__section__left">
                     <ul>
@@ -116,7 +117,9 @@
             
             <script src="/js/script.js"></script>
 
+            </div>
         </div>
+        
 
     </header>
 
